objects/VPPSR_Address_For_Service__c.object
<CustomObject>
    <fields>
        <fullName>Registration_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registration Detail</label>
        <referenceTo>VPPSR_Registration_Detail__c</referenceTo>
        <relationshipName>Address_For_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>addressee__c</fullName>
        <label>addressee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_Address__c</fullName>
        <label>email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fax_Number__c</fullName>
        <label>fax Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>physical_Address__c</fullName>
        <label>physical Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Address For Service</label>
    <nameField>
        <displayFormat>VAS-{000000}</displayFormat>
        <label>Address For Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Address For Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>